fixed total balance number being too big when you are at the max ammount, form now does not allow you to submit the form if the ammount with the current total balance will exceed the max ammount

--- a/src/style.css
+++ b/src/style.css
@@ -229,7 +229,7 @@ main {
 }
 
 .graph-total {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .percentage-container {
@@ -310,7 +310,7 @@ main {
 }
 
 .homeLinkAmmount {
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 .homeLinkAmmountSubContainer {
